4. istio gateway/gateway-app.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway-app
  namespace: default
spec:
  selector:
    role: business
  servers:
    - hosts:
        - "*.app.kaonmir.xyz"
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: false
    #     httpsRedirect: true
    # - hosts:
    #     - www.whereurl.com
    #     - whereurl.com
    #   port:
    #     name: https
    #     number: 443
    #     protocol: HTTP # HTTPS 했더니 오류남
    #   tls:
    #     mode: PASSTHROUGH
